--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "@bedew/ink-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.15.5",
-    "morgan": "^1.9.0",
-    "mysql2": "^1.4.2",
-    "sequelize": "^4.11.0"
-  }
+    "name": "@bedew/ink-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon app.js",
+        "debug": "nodemon --inspect app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.15.5",
+        "morgan": "^1.9.0",
+        "mysql2": "^1.4.2",
+        "sequelize": "^4.11.0"
+    }
 }
