--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "body-parser": "^1.18.2",
         "cookie-parser": "^1.4.3",
+        "cors": "^2.8.4",
         "express": "^4.15.5",
         "morgan": "^1.9.0",
         "mysql2": "^1.4.2",
