--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
         "express": "^4.15.5",
+        "jsonwebtoken": "^8.1.0",
         "morgan": "^1.9.0",
         "mysql2": "^1.4.2",
         "sequelize": "^4.19.0"
