--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon app.js",
-        "debug": "nodemon --inspect app.js",
+        "debug": "nodemon --inspect=0.0.0.0:9229 app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
