--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "morgan": "^1.9.0",
         "ms": "^2.0.0",
         "mysql2": "^1.5.1",
+        "path-to-regexp": "^2.1.0",
         "sequelize": "^4.22.15"
     }
 }
