--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon app.js",
-        "debug": "nodemon --inspect=0.0.0.0:9229 app.js",
+        "start": "nodemon --inspect=0.0.0.0:9229 app.js",
+        "start-rc": "nodemon app.js",
+        "start-production": "nodemon app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
